# hotel-booking

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.yaml  log_conf.yaml  pyproject.toml
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: 16dd93c78e6c_booking_added_status_column.py  54071d15b8fb_booking_added_time_stamp_mixin.py  68e75a8cc009_delete_price_per_day.py  69cbd94c7348_booking_payment_status.py  9c77b0f4ef3c_init_tables.py  e4a4523b8bac_booking_datetime_date.py  fdfda2c08861_added_payment.py
nginx/: nginx.conf
scripts/: app.sh  celery_worker.sh  flower.sh
src/: main.py  tasks.py
src/api/: __init__.py  deps.py  metrics.py
src/core/: container.py  database.py  exception_handlers.py  exceptions.py  logger.py  security.py  settings.py  types.py  uow.py
src/enums/: currency.py  payment.py  room.py  status.py  token.py
src/middlewares/: __init__.py  limiter.py  session_context.py  throttling.py
src/models/: base.py  booking.py  hotel.py  review.py  room.py  user.py
src/repositories/: __init__.py  base.py  booking.py  booking_repo.py  hotel.py  hotel_repo.py  payment.py  review.py  review_repo.py  room.py  room_repo.py  user.py  user_repo.py
src/schemas/: auth.py  booking.py  filters.py  hotel.py  pagination.py  payment.py  response.py  review.py  room.py  token.py  user.py
src/services/: __init__.py  auth.py  auth_service.py  booking.py  booking_service.py  email.py  email_service.py  hotel.py  payment_service.py  (+7 more)
templates/: email_confirmation.html  reset_password.html
(+118 files in other folders)
