[tool.poetry]
name = "hotel-booking"
version = "0.1.0"
description = ""
authors = ["medlcago"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
phonenumbers = "^8.13.49"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
dependency-injector = "^4.43.0"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
prometheus-fastapi-instrumentator = "^7.0.0"
fastapi-cache2 = "^0.2.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
