[project]
name = "hotel-booking"
version = "0.1.0"
description = ""
authors = [{ name = "medlcago" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.5,<0.116",
    "uvicorn>=0.32.0,<0.33",
    "sqlalchemy>=2.0.36,<3",
    "alembic>=1.14.0,<2",
    "pydantic[email]>=2.9.2,<3",
    "phonenumbers>=8.13.49,<9",
    "pydantic-settings>=2.6.1,<3",
    "asyncpg>=0.30.0,<0.31",
    "dependency-injector>=4.43.0,<5",
    "bcrypt>=4.2.0,<5",
    "pyjwt>=2.9.0,<3",
    "prometheus-fastapi-instrumentator>=7.0.0,<8",
    "fastapi-cache2>=0.2.2,<0.3",
    "pyyaml>=6.0.2,<7",
    "redis>=5.2.0,<6",
    "celery>=5.4.0,<6",
    "itsdangerous>=2.2.0,<3",
    "aiosmtplib>=3.0.2,<4",
    "asgiref>=3.8.1,<4",
    "flower>=2.0.1,<3",
    "jinja2>=3.1.4,<4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
